--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@badgateway/oauth2-client": "^2.2.3",
+    "@types/spotify-api": "^0.0.22",
     "eslint": "^8.46.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.3",
