--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanme",
+  "name": "Mixtune-Jamboree",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@badgateway/oauth2-client": "^2.2.3",
-    "@types/spotify-api": "^0.0.22",
+    "@spotify/web-api-ts-sdk": "^1.1.0",
     "eslint": "^8.46.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.3",
