--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@netlify/functions": "^2.0.2",
     "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0"
   }
