--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,19 @@
 {
+  "scripts": {
+    "start": "nodemon server.ts"
+  },
   "dependencies": {
     "@netlify/functions": "^2.0.2",
     "@types/express": "^4.17.17",
+    "@types/node": "^20.5.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
