--- a/backend/netlify.toml
+++ b/backend/netlify.toml
@@ -7,4 +7,4 @@
   status = 200
   to = "/.netlify/functions/api/:splat"
 [build]
-    ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF backend"
+    ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ."
