--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.6",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0"
   },
