--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,2 +1,6 @@
 [build]
     ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ."
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
